# bug-report-pipx-pip-dependency

./: pyproject.toml
pipx_bug_report/: main.py
