[tool.poetry]
name = "pipx-bug-report"
version = "0.1.0"
description = ""
authors = ["Carl Csaposs <carl.csaposs@canonical.com>"]
readme = "README.md"

[tool.poetry.scripts]
check-version = "pipx_bug_report.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pip = ">=22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
